--- a/web-resources/style/work/list.scss
+++ b/web-resources/style/work/list.scss
@@ -249,26 +249,40 @@ main {
       display: inline-block;
     }
 
+    &-title, &-customer {
+      display: block;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+
+      &:hover {
+        color: #2371a9;
+      }
+
+    }
+
     &-title {
-      display: inline-block;
-      margin-top: .6rem;
-      font-size: 18px;
+      font-size: 16px;
       font-weight: bold;
       color: #777;
       letter-spacing: -1px;
     }
 
     &-customer {
+      margin-top: .6rem;
       font-weight: bold;
-      color: #924c48;
+      color: #4c82a9;
+      font-size: 20px;
+      letter-spacing: -.8px;
     }
 
     &-item {
       display: flex;
       align-items: center;
+      margin-top: .5rem;
 
       &-len {
-        margin: 0 .3rem 0 auto;
+        margin: 0 .6rem 0 auto;
         width: 3rem;
         height: 2.5rem;
 
