--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -4,46 +4,50 @@
     <meta charset="UTF-8">
     <title>Work</title>
 
+    <link rel="stylesheet" href="../static/dist/test.css">
     <script src="../static/lib/js/es6-promise.js"></script>
 
-    <script id="uu" type="text/html">
-        <div>
-            <div class="ctrl">
-                <div class="sel year" :year>
-                    <span class="move prev" data-move="{{prev}}">&lt; {{_.val - 1}}</span>
-                    <span class="current">{{val}}</span>
-                    <span class="move next" data-move="{{next}}">{{_.val + 1}} &gt;</span>
-                </div>
-                <div class="sel month" :month>
-                    <span class="move prev" data-move="{{prev}}">&lt; {{_.val === 0 ? 12 : _.val}}</span>
-                    <span class="current">{{_.val + 1}}</span>
-                    <span class="move next" data-move="{{next}}">{{_.val === 11 ? 1 : (_.val + 2)}} &gt;</span>
-                </div>
-            </div>
-            <table>
-                <thead>
-                <tr>
-                    <th>일</th>
-                    <th>월</th>
-                    <th>화</th>
-                    <th>수</th>
-                    <th>목</th>
-                    <th>금</th>
-                    <th>토</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr :date>
-                    <td class="{{className}}" :>
-                        <span data-dismiss="{{val}}">{{date}}</span>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
+    <script id="test" type="text/html">
+        <table>
+            <thead>
+            <tr>
+                <th>No</th>
+                <th data-order-value="{{$.index}}" style="width: {{size}};" ::headers>
+                    {{title}}
+                    <span class="data-order-desc">↑</span>
+                    <span class="data-order-asc">↓</span>
+                </th>
+                <th>...</th>
+            </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
     </script>
 <body>
 <main>
+
+    <div class="uu magic">
+        <span>1</span>
+        <div class="uu focus-panel">
+            <span>2</span>
+            <div class="uu focus-panel">
+                <span>3</span>
+                <span data-dismiss>끄기</span>
+                <div class="uu focus-panel"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="uu magic">
+        <span>1</span>
+        <div class="uu focus-panel">
+            <span>2</span>
+            <div class="uu focus-panel">
+                <span>3</span>
+                <div class="uu focus-panel"></div>
+            </div>
+        </div>
+    </div>
 </main>
 <script src="../static/dist/work/test.js"></script>
 </body>
