--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -48,6 +48,11 @@
             </div>
         </div>
     </div>
+    <div class="target">
+        <br><br><br><br><br><br><br><br><br><br><br>
+        <span>asdfasdf</span>
+    </div>
+    <div class="box"></div>
 </main>
 <script src="../static/dist/work/test.js"></script>
 </body>
