--- a/web-resources/style/work/view.scss
+++ b/web-resources/style/work/view.scss
@@ -3,7 +3,7 @@
 @import "view/screen";
 
 @import "view/image-screen";
-@import "view/confirm-box";
+@import "_support/confirm-box";
 
 $view-gray-bgcolor: #f9f9f9;
 
