--- a/src/main/resources/templates/work/data-table.html
+++ b/src/main/resources/templates/work/data-table.html
@@ -10,12 +10,12 @@
         <tr class="data-form">
             <td><input type="hidden" data-type="number" name="id"></td>
             <td class="dropdown" data-dropdown-event ::>
-                <input data-type="{{type}}" name="{{$.index}}" required="{{required}}"
-                       {{_.readOnly ? 'readonly' : ''}}>
+                <input data-type="{{type}}" name="{{$.index}}" {{required ? 'required' : ''}}
+                       {{readOnly ? 'readonly' : ''}}>
             </td>
             <td>
                 <span data-form="confirm">확인</span>
-                <span data-form="cancel">취소</span>
+                <span data-cancel>취소</span>
             </td>
         </tr>
     </script>
@@ -98,7 +98,13 @@
 
 </main>
 
-
+<div id="confirm-box" data-dismiss="false">
+    <div class="confirm-box-content">정말 삭제하시겠습니까?</div>
+    <div class="confirm-box-btns text-center">
+        <span class="confirm-box-btn confirm-box-btn-submit" data-submit>삭제</span>
+        <span class="confirm-box-btn confirm-box-btn-cancel" data-cancel>취소</span>
+    </div>
+</div>
 <script src="/dist/work/data-table.js"></script>
 </body>
 </html>
