--- a/web-resources/style/work/_support/_confirm-box.scss
+++ b/web-resources/style/work/_support/_confirm-box.scss
@@ -1,9 +1,10 @@
 
 #confirm-box {
 
-  display: none;
   position: absolute;
-  z-index: 1040;
+  z-index: -1;
+  visibility: hidden;
+
 
   margin-top: 1rem;
   padding: 1rem;
@@ -13,7 +14,8 @@
   box-shadow: 3px 3px 9px #e8e8e8;
 
   &.on {
-    display: block;
+    visibility: visible;
+    z-index: 1040;
   }
 }
 
