--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <title>Work</title>
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/dist/test.css">
     <script src="../static/lib/js/es6-promise.js"></script>
-<body>
+
+    <script src="./lotto.html" type="text/html" id="nav-template"></script>
+
+    <style>
+        [\&^="?"] {
+            display: none;
+        }
+    </style>
+
+</head>
+<body class="d-none" :access="asdfasdf" :template="asdfasdf">
 
 <main>
-    <div id="div">
-        <input name="asdf" data-access="data.datetime?date:value">
-        <span data-access="'오늘은 은날 {data.datetime?date|dd}일'"></span>
-        <div data-ignor>
-            <span data-access="data.music"></span>
-        </div>
-    </div>
+    <ul :template="">나와</ul>
+    <ul evt="">들어가</ul>
 </main>
 
 
