--- a/src/main/resources/templates/work/modules/aside/todo.html
+++ b/src/main/resources/templates/work/modules/aside/todo.html
@@ -3,7 +3,7 @@
 
     <div class="hide" data-ignore>
         <script data-template="list" type="text/html">
-            <div class="todo-list-item" data-modifier-target="list" data-dismiss="false" data-value="type:list,target:this">
+            <div class="todo-list-item" data-modifier-target="list" data-dismiss="false" data-type="list" e="type; target:this">
                 <pre data-directive="value"></pre>
                 <span class="todo-list-item-datetime"
                       data-directive="datetime | datetime : 'yyyy-MM-dd(E) HH:mm'"></span>
@@ -31,8 +31,8 @@
 
      -->
     <div class="todo-add"
-         data-template-target=".todo-list" data-mapping="" data-modifier-pos="-1"
-         data-modifier-creator data-modifier-target="list" data-value="type:list,target:this,templateSelector:[data-template-target]">
+         data-template-target=".todo-list" data-mapping="" data-modifier-pos="-1" data-type="list"
+         data-modifier-creator data-modifier-target="list" e="type; target:this; templateSelector:[data-template-target]">
         <input type="hidden" name="datetime" data-type="date" data-default="now">
         <textarea name="value" required></textarea>
         <span data-modifier="create">등록</span>
