--- a/src/main/resources/templates/work/view.html
+++ b/src/main/resources/templates/work/view.html
@@ -9,7 +9,7 @@
 
     <!------------------  ▼ [data-template] ▼  -------------------->
     <script type="text/html" data-template="print">
-        <div class="work-items-print-list" data-value="index:{{index}}">
+        <div class="work-items-print-list" e="index" data-index="{{index}}">
             <div class="work-items-print-list-anchor">
                 <a href="{{path}}" class="work-items-print-list-icon file-icon file-icon-{{_.data.filetype}}"></a>
                 <span class="work-items-print-list-name">{{_.data.getOrigName()}}</span>
@@ -25,7 +25,7 @@
 
     <!------------------  ▼ [data-template] ▼  -------------------->
     <script type="text/html" data-template="items">
-        <tr data-element="target" data-form-enter="true" data-value="mapping:[data-mapping]">
+        <tr data-element="target" data-form-enter="true" e="mapping:[data-mapping]">
             <td data-directive="subject"></td>
             <td data-directive="detail"></td>
             <td data-directive="count" class="text-right"></td>
@@ -57,7 +57,7 @@
 
 
     <script type="text/html" data-template="memo">
-        <div class="work-memo-list-item" data-element="target" data-value="mapping">
+        <div class="work-memo-list-item" data-element="target" e="mapping">
             <pre data-directive="value"></pre>
             <span class="work-memo-list-item-datetime" data-directive="datetime | datetime"></span>
             <div class="view-btns">
@@ -68,7 +68,7 @@
     </script>
 
     <script type="text/html" data-template="refs">
-        <div class="work-refs-list" data-element="target" data-value="mapping">
+        <div class="work-refs-list" data-element="target" e="mapping">
             <span class="work-refs-remove" data-event="remove">×</span>
             <a class="work-refs-thumb file-icon" data-directive=" | refThumb"></a>
             <div class="work-refs-name" data-directive="original_name"></div>
@@ -160,10 +160,14 @@
         <tr data-pre-processor="compute">
             <td><input name="subject" required></td>
             <td><input name="detail"></td>
-            <td class="text-right"><input name="count" data-compute="0" data-type="number" data-pre-processor="number"></td>
-            <td class="text-right"><input name="price" data-compute="1" data-type="number" data-pre-processor="number"></td>
-            <td class="text-right"><input name="total" data-compute="3"  data-type="number" data-pre-processor="number" disabled></td>
-            <td class="text-right"><input name="vat" data-compute="2" data-type="number" data-pre-processor="number"></td>
+            <td class="text-right"><input name="count" data-compute="0" data-type="number" data-pre-processor="number">
+            </td>
+            <td class="text-right"><input name="price" data-compute="1" data-type="number" data-pre-processor="number">
+            </td>
+            <td class="text-right"><input name="total" data-compute="3" data-type="number" data-pre-processor="number"
+                                          disabled></td>
+            <td class="text-right"><input name="vat" data-compute="2" data-type="number" data-pre-processor="number">
+            </td>
             <td><input name="memo"></td>
             <td class="ctrl">
                 <span class="view-btn form-btn" data-event="confirm">확인</span>
@@ -208,7 +212,7 @@
 
     <span class="page-name">작업상세</span>
 
-    <div class="nav-btns" data-mapper="info" data-follow="items,memo,refs" data-value="mapper:this,name:info">
+    <div class="nav-btns" data-mapper="info" data-follow="items,memo,refs" data-name="info" e="mapper:this; name">
         <span class="active nav-resource">작업수<b data-directive="item_len | len"></b></span>
         <span class="nav-resource">작업메모<b data-directive="memo_len | len"></b></span>
         <span class="nav-resource">참고파일<b data-directive="file_len | len"></b></span>
@@ -239,7 +243,7 @@
             <div class="view-meta-remove" data-pre-processor="remove">×작업삭제</div>
         </div>
 
-        <div class="view-row" data-mapper="title" data-value="mapper:this,name:title">
+        <div class="view-row" data-mapper="title" data-name="title" e="mapper:this; name">
 
             <div class="view-container">
                 <div class="view-content text-center work-title">
@@ -264,8 +268,8 @@
             </div>
 
             <div class="view-container">
-                <div class="view-content" data-mapper="customer"  data-value="mapper:this,name:customer">
-                    <div class="work-customer" data-mapping="customer" data-element="target" data-value="mapping">
+                <div class="view-content" data-mapper="customer" e="mapper:this; name:[data-mapper]">
+                    <div class="work-customer" data-mapping="customer" data-element="target" e="mapping">
                         <div class="view-btns">
                             <span class=" view-btn" data-event="modify">수정</span>
                         </div>
@@ -352,7 +356,7 @@
             </div>
         </div>
 
-        <div class="view-row" data-mapping="items"  data-value="mapper:this,mapping,name:items"
+        <div class="view-row" data-mapping="items" e="mapper:this; mapping; name:[data-mapping]"
              data-mapper="items" data-pre-processor="itemSort">
 
             <div class="view-header">
@@ -385,7 +389,7 @@
         </div>
 
 
-        <div class="view-row" data-mapper="text" data-value="mapper:this,name:text">
+        <div class="view-row" data-mapper="text" e="mapper:this; name:[data-mapper]">
 
             <div data-element="target">
                 <div class="view-header">
@@ -405,7 +409,7 @@
         </div>
 
 
-        <div class="view-row" data-mapping="memo" data-mapper="memo"  data-value="mapper:this,name:memo,mapping">
+        <div class="view-row" data-mapping="memo" data-mapper="memo" e="mapper:this; name:memo; mapping">
 
             <div class="view-header">
                 <span class="view-header-subject">작업메모</span>
@@ -424,16 +428,16 @@
         </div>
 
 
-        <div class="view-row" data-mapper="refs" data-value="mapper:this,name:refs">
+        <div class="view-row" data-mapper="refs" e="mapper:this; name:[data-mapper]">
 
             <div class="view-header">
                 <span class="view-header-subject">작업파일</span>
                 <span class="view-btns">
-                    <span class="view-btn" data-event="upload" data-value="type:ref">추가</span>
+                    <span class="view-btn" data-event="upload" e="type" data-type="ref">추가</span>
                 </span>
             </div>
 
-            <div class="view-container" data-mapping="refs" data-value="mapping">
+            <div class="view-container" data-mapping="refs" e="mapping">
                 <div class="view-content work-refs" data-template="refs" data-pre-processor="imageScreen">
                 </div>
             </div>
@@ -444,11 +448,11 @@
 </main>
 
 
-<div id="screen" data-mapper="screen" data-value="mapper:this,name:screen">
+<div id="screen" data-mapper="screen" e="mapper:this; name:[data-mapper]">
     <div class="screen-nav">
         <div class="screen-nav-left">
-            <div class="screen-upload-btn" data-event="screenFile" data-value="type:draft">시안 업로드</div>
-            <div class="screen-upload-btn" data-event="screenFile" data-value="type:print">인쇄파일 업로드</div>
+            <div class="screen-upload-btn" data-event="screenFile" data-type="draft" e="type">시안 업로드</div>
+            <div class="screen-upload-btn" data-event="screenFile" data-type="print" e="type">인쇄파일 업로드</div>
         </div>
 
         <div class="screen-nav-center text-center">
