--- a/src/main/resources/templates/work2/view.html
+++ b/src/main/resources/templates/work2/view.html
@@ -2,72 +2,275 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Unknown</title>
+    <title>hancomee</title>
+
     <link rel="stylesheet" href="/dist/work2/view.css">
-
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined">
 </head>
 <body>
 
-<div class="container">
-    <div id="view" data-element="" data-template="work" data-access="work.id:[data-id]">
-        <div class="info">
-            <span class="info-date" data-access='$datetime("work.datetime")'></span>
-            <h1 data-access="work.title" data-access="work.datetime?date|yyyy-mm"></h1>
+<nav>
+</nav>
+
+
+<div class="container-fluid px-4">
+
+    <div class="row" :template="work">
+
+        <!-- Work -->
+        <div class="col-9">
+            <div id="view" class="dash-box" data-element :access="work.id:[data-id]">
+
+                <!-- Customer -->
+                <div id="customer" data-element :template="customer" evt='get("customer")' :access="data.id:[data-id]">
+                    <div class="p-2 text-right">
+                        <span class="material-icons ml-auto" data-event="modifyCustomer">settings</span>
+                    </div>
+                    <div class="customer-info">
+                        <div class="text-center">
+                            <strong :access='"{data.biz_con} {data.biz_type}"'></strong>
+                            <h4 class="font-weight-bolder" :access="data.name"></h4>
+                        </div>
+                        <table>
+                            <tbody>
+                            <tr>
+                                <th><span class="material-icons" data-tooltip="대표자">account_circle</span></th>
+                                <td :access="data.owner"></td>
+                            </tr>
+                            <tr>
+                                <th><span class="material-icons" data-tooltip="휴대폰">phonelink_ring</span></th>
+                                <td :access="data.mobile"></td>
+                            </tr>
+                            <tr>
+                                <th><span class="material-icons" data-tooltip="전화">phone</span></th>
+                                <td :access="data.tel"></td>
+                            </tr>
+                            <tr>
+                                <th><span class="material-icons" data-tooltip="팩스">local_printshop</span></th>
+                                <td :access="data.fax"></td>
+                            </tr>
+                            <tr>
+                                <th><span class="material-icons-outlined" data-tooltip="이메일">mail</span></th>
+                                <td :access="data.email"></td>
+                            </tr>
+                            <tr>
+                                <th><span class="material-icons" data-tooltip="주소">room</span></th>
+                                <td :access="data.address"></td>
+                            </tr>
+                            <tr>
+                                <td><span class="material-icons" data-tooltip="메모">textsms</span></td>
+                                <td :access="data.memo"></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- Customer Form -->
+                    <div class="customer-form" :template="customerForm">
+
+                    </div>
+                </div>
+
+
+                <!-- Work Header -->
+                <div id="work-header" class="d-flex">
+
+                    <div class="header d-flex align-items-center justify-content-center">
+                        <div>
+                            <span class="duration mb-2 mx-auto" :access="work.datetime?duration"></span>
+                            <span class="h5" :access='work.datetime?datetime("yyyy-MM-dd(E) HH:mm")'></span>
+                        </div>
+                    </div>
+
+                    <div class="d-flex align-items-center px-4 flex-grow-1">
+
+                        <!-- 작업상태 토글 -->
+                        <div class="btn-group dropdown mr-3">
+                            <button type="button" class="btn btn-primary dropdown-toggle"
+                                    data-toggle="dropdown"
+                                    :access='work.state?state'>
+                            </button>
+                            <ul class="dropdown-menu work-state" data-dismiss :access="work.state:[data-state]"
+                                data-event="state">
+                                <li><span class="dropdown-item cursor-pointer" evt="state" data-state="0">작업대기</span></li>
+                                <li><span class="dropdown-item cursor-pointer" evt="state" data-state="1">시안검토</span></li>
+                                <li><span class="dropdown-item cursor-pointer" evt="state" data-state="2">시안완료</span></li>
+                                <li><span class="dropdown-item cursor-pointer" evt="state" data-state="3">제작중</span></li>
+                                <li><span class="dropdown-item cursor-pointer" evt="state" data-state="4">입고</span></li>
+                                <li><span class="dropdown-item cursor-pointer" evt="state" data-state="5">납품</span></li>
+                                <li><span class="dropdown-item cursor-pointer" evt="state" data-state="6">완료</span></li>
+                            </ul>
+                        </div>
+                        <div class="mr-auto">
+                            <span class="h3 font-weight-bolder" :access="work.title"></span>
+                        </div>
+
+                        <div class="d-flex text-nowrap" data-event="bill">
+                            <div class="bill-btn" evt="printType:{0}">
+                                <span class="material-icons ml-auto">add_box</span>
+                                <span class="d-block">견적서</span>
+                            </div>
+                            <div class="bill-btn" evt="printType:{1}">
+                                <span class="material-icons ml-auto">add_box</span>
+                                <span class="d-block">명세표</span>
+                            </div>
+                            <div class="bill-btn" evt="printType:{1}">
+                                <span class="material-icons ml-auto">add_box</span>
+                                <span class="d-block" evt="printType:{2}">영수증</span>
+                            </div>
+                        </div>
+
+                        <div class="d-flex align-items-center">
+                            <div class="money-info">
+                                <span>단가</span>
+                                <strong class="h3 d-block text-right" :access="work.price?number">0</strong>
+                            </div>
+                            <div class="money-info">
+                                <span>부가세</span>
+                                <strong class="h3 d-block text-right" :access="work.vat?number">0</strong>
+                            </div>
+                            <div class="money-info">
+                                <span class="font-weight-bolder">합계</span>
+                                <strong class="h3 font-weight-bolder d-block text-right"
+                                        :access="work.total?number">0</strong>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <div class="dash-box-header">
+                    <strong>작업 목록</strong>
+                    <span class="material-icons ml-auto" data-event="modifyItem" data-tooltip="작업 추가">add_box</span>
+                </div>
+
+                <div class="items">
+                    <table class="table item-table">
+                        <thead>
+                        <tr>
+                            <th>품목</th>
+                            <th>규격</th>
+                            <th class="text-center">수량</th>
+                            <th class="text-right">단가</th>
+                            <th class="text-right">금액</th>
+                            <th class="text-right">부가세</th>
+                            <th>비고</th>
+                            <th class="text-center">..</th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tbody data-element="itemContainer">
+                        <tr :template="item" evt='get("item")' :access="data.priority:[data-priority]" draggable="true">
+                            <td :access="data.subject"></td>
+                            <td :access="data.detail"></td>
+                            <td class="text-center" :access="data.count?number"></td>
+                            <td class="text-right" :access="data.price?number"></td>
+                            <td class="text-right" :access="data.total?number"></td>
+                            <td class="text-right" :access="data.vat?number"></td>
+                            <td :access="data.memo"></td>
+                            <td class="text-nowrap">
+                                <div class="d-flex">
+
+                                    <div :access='$toggle("", "good", "data.draft.length")'>
+                                        <span class="material-icons ml-auto">add_box</span>
+                                    </div>
+
+                                    <div class="print-files d-inline-block dropdown" x-placement="right">
+                                        <div :access='$toggle("", "good", "data.draft.length")' data-toggle="dropdown">
+                                            <span class="material-icons ml-auto">add_box</span>
+                                        </div>
+                                        <div class="print-pop dropdown-menu" data-element="prints">
+                                            <i data-dismiss>지우기</i>
+                                            <div :template="?print" :access="data.original_name"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="text-nowrap">
+                                <span class="material-icons ml-auto" data-event="modifyItem">settings</span>
+                            </td>
+                            <td class="text-nowrap">
+                                <span class="material-icons ml-auto" data-event="removeItem"
+                                      data-tooltip="삭제!">disabled_by_default</span>
+                            </td>
+                        </tr>
+                        <tr class="d-form" data-element="" :template="?itemForm" evt='get("itemForm")' :access="data.id:[data-id]">
+                            <td><input class="d-input" name="subject"></td>
+                            <td><input class="d-input" name="detail"></td>
+                            <td><input class="d-input" name="count" data-type="number"></td>
+                            <td><input class="d-input" name="price" data-type="number"></td>
+                            <td><input class="d-input" name="total" data-type="number"></td>
+                            <td><input class="d-input" name="vat" data-type="number"></td>
+                            <td><input class="d-input" name="memo"></td>
+                            <td></td>
+                            <td>
+                                <span class="material-icons d-form-ani" data-event="cancelItem">settings</span>
+                            </td>
+                            <td>
+                                <span class="material-icons" data-event="updateItem">check_circle</span>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
-        <div class="customer" data-element data-template="customer" data-access="customer.id:[data-id]">
-            <table class="table table-bordered">
-                <tr>
-                    <th>상호</th>
-                    <td data-access="customer.name"></td>
-                </tr>
-            </table>
-        </div>
-        <div class="items">
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th>품목</th>
-                    <th>규격</th>
-                    <th>수량</th>
-                    <th>단가</th>
-                    <th>금액</th>
-                    <th>부가세</th>
-                    <th>비고</th>
-                    <th>...</th>
-                </tr>
-                </thead>
-                <tbody data-element="itemContainer">
-                <tr data-element="" data-template="?item" data-access="item.id:[data-id]">
-                    <td data-access="item.subject"></td>
-                    <td data-access="item.detail"></td>
-                    <td data-access="item.count"></td>
-                    <td data-access="item.price"></td>
-                    <td data-access="item.total"></td>
-                    <td data-access="item.vat"></td>
-                    <td data-access="item.memo"></td>
-                    <td>
-                        <span class="btn btn-info btn-sm" data-event="modifyItem">수정</span>
-                        <span class="btn btn-danger btn-sm" data-event="removeItem">삭제</span>
-                    </td>
-                </tr>
-                <tr class="d-form" data-element="" data-template="?itemForm" data-access="item.id:[data-id]">
-                    <td><input class="form-control" name="subject" data-access="data.item.subject:value"></td>
-                    <td><input class="form-control" name="detail" data-access="data.item.detail:value"></td>
-                    <td><input class="form-control" name="count" data-type="number" data-access="data.item.count:value"></td>
-                    <td><input class="form-control" name="price" data-type="number" data-access="data.item.price:value"></td>
-                    <td><input class="form-control" name="total" data-type="number" data-access="data.item.total:value"></td>
-                    <td><input class="form-control" name="vat" data-type="number" data-access="data.item.vat:value"></td>
-                    <td><input class="form-control" name="memo" data-access="data.item.memo:value"></td>
-                    <td>
-                        <span data-event="updateItem">수정</span>
-                        <span data-event="saveItem" data-access='$class({"hide":"item.id"})'>등록</span>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+        <div class="col-3">
+
+            <div class="dash-box">
+                <div class="dash-box-header">
+                    <strong>작업 메모</strong>
+                    <span class="material-icons ml-auto" data-event="addMemo" data-tooltip="메모 추가">add_box</span>
+                </div>
+                <div data-element="memoContainer">
+                    <div :template="?workMemo">
+                        <pre :access="data.value"></pre>
+                    </div>
+                    <div :template="?memoForm"></div>
+                </div>
+            </div>
+
+            <div class="dash-box">
+                <div class="dash-box-header">
+                    <strong>작업 파일</strong>
+                    <span class="material-icons ml-auto" data-event="uploadRef" data-tooltip="파일 추가">add_box</span>
+                </div>
+                <div data-element="refContainer">
+                    <div :template="?workRef">
+                        <pre :access="data.value"></pre>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+</div>
+
+
+<div class="confirm-box dropdown-menu" :template="confirmBox">
+    <button class="btn btn-danger" data-element="confirm">삭제</button>
+    <button class="btn btn-secondary" data-element="cancel">취소</button>
+</div>
+
+<div id="uploader" :template="workUploader">
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped" data-element="gauge" style="width: 0%"></div>
+    </div>
+    <div class="text-center" data-element="fileinfo"></div>
+    <div class="progress mt-5">
+        <div class="progress-bar progress-bar-striped bg-success" data-element="countGauge" style="width: 0%"></div>
+    </div>
+    <div class="text-center" data-element="current"></div>
+</div>
+
+<div id="screen" class="screen v-screen" :template="screen"></div>
+
+
+<#include "./modules/bill.html">
+
+<!-- 화면 블락처리 -->
+<div id="spinner">
+    <div class="spinner-border text-light" role="status"></div>
 </div>
 
 <script src="/lib/js/es6-promise.js"></script>
